have the new release listed in the right place, even if no changes were made in
that repo.

Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools
- `embark-anyone`: allows you to embark as any civilisation, including dead, and non-dwarven ones

## New Features

## Fixes

## Misc Improvements

## Removed

# 50.13-r4

## New Features
- `gui/journal`: new automatic table of contents. add lines that start with "# ", like "# Entry for 502-04-02", to add hyperlinked headers to the table of contents

## Fixes
- `full-heal`: fix ``-r --all_citizens`` option combination not resurrecting citizens
- `open-legends`: don't intercept text bound for vanilla legends mode search widgets
- `gui/unit-info-viewer`: correctly display skill levels when rust is involved
- `timestream`: fix dwarves spending too long eating and drinking
- `timestream`: fix jobs not being created at a sufficient rate, leading to dwarves standing around doing nothing
- `locate-ore`: fix sometimes selecting an incorrect tile when there are multiple mineral veins in a single map block
- `gui/settings-manager`: fix position of "settings restored" message on embark when the player has no saved embark profiles
- `build-now`: fix error when building buildings that (in previous DF versions) required the architecture labor
- `prioritize`: fix incorrect restoring of saved settings on Windows
- `list-waves`: no longer gets confused by units that leave the map and then return (e.g. squads who go out on raids)
- `fix/dead-units`: fix error when removing dead units from burrows and the unit with the greatest ID was dead
- `makeown`: ensure names given to adopted units (or units created with `gui/sandbox`) are respected later in legends mode
- `gui/autodump`: prevent dumping into walls or invalid map areas
- `gui/autodump`: properly turn items into projectiles when they are teleported into mid-air

## Misc Improvements